# Errority

./: Cargo.toml  LICENSE  README.md  package.json  transhumanprofile2026.aln
apis/: ecokarma_public_api_v1.0.yaml
code/lib/: core-ecokarma-operators-pseudocode-v1.0.md
config/eco/: polytope-city-X-v1.0.json
config/impact/: alpha-city-X-v1.0.json  beta-city-X-v1.0.json
crates/biosafety-guards/src/: lib.rs
docs/: public-faq-and-risks-v1.0.md
js/app/: package.json
js/app/src/: index.tsx
js/app/src/components/: ErrorityConsole.tsx
js/app/src/ethics/: manifesto.ts
js/tools/: package.json
js/tools/src/: errority-tool.ts
models/: .biocompat-index-model.aln
pilots/: city-district-evaluation-plan-v1.0.md
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: argument.rs  ethics.rs  input.rs  knowledge.rs  lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
schemas/: bioevidence.schema.json  biomech-integration-policy.schema.json  ecokarma_relational_schema_v1.0.sql  neurorights-policy.schema.json
specs/: evolve-token.v1.json  math-ecokarma-operators-v1.0.md
specs/governance/: neuro_ecokarma_governance_spec_v1.0.md  neurorights_compliance_mapping_v1.0.md
specs/math/: ecokarma_operators_v1.0.md
