[package]
name = "errority-wasm"
version = "0.1.0"
edition = "2021"
description = "Errority WASM bridge: expose the engine to JavaScript."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
errority-core = { path = "../core" }

[features]
default = []
